Crash with OSL + Rendering Viewport + Material Tab in Properties #60434

Closed
opened 2019-01-12 09:45:04 +01:00 by Vitor Balbio · 15 comments

System Information
Operating system: Windows 10
Graphics card: GTX 970

Blender Version
Broken:
2.80, 5e356cc5c8, blender2.8, 2019-01-12
Worked: 2.79

Short description of error
Blender crash when using OSL + Rendering with Cycles in Viewport + Material tab in Properties or Select material in Node editor or any other places that the material icons are shown.

Exact steps for others to reproduce the error
Open Blender, Set Cycles and OSL on. Set render mode to Rendered. Open the Material tab in Properties editor.

**System Information** Operating system: Windows 10 Graphics card: GTX 970 **Blender Version** Broken: 2.80, 5e356cc5c89b, blender2.8, 2019-01-12 Worked: 2.79 **Short description of error** Blender crash when using OSL + Rendering with Cycles in Viewport + Material tab in Properties or Select material in Node editor or any other places that the material icons are shown. **Exact steps for others to reproduce the error** Open Blender, Set Cycles and OSL on. Set render mode to Rendered. Open the Material tab in Properties editor.
Author

Added subscriber: @vitorbalbio-3

Added subscriber: @vitorbalbio-3

#60747 was marked as duplicate of this issue

#60747 was marked as duplicate of this issue
Brecht Van Lommel self-assigned this 2019-01-14 04:51:21 +01:00

Added subscribers: @IPv6, @brecht

Added subscribers: @IPv6, @brecht

Any news? Quite a frequent crash, when OSL used heavily ///

Any news? Quite a frequent crash, when OSL used heavily ///

Added subscriber: @cire-4

Added subscriber: @cire-4

Not sure if this might help, but I'm seeing the same bug in the daily builds of 2.79, while official 2.79b works fine. To my knowledge the only code shared between 2.79 builds and 2.80 beta are the updates to Cycles, so hopefully that narrows down the source of the problem? May be in the newer Cycles/viewport-render code and not the handling of OSL shaders or materials UI display?

Not sure if this might help, but I'm seeing the same bug in the daily builds of 2.79, while official 2.79b works fine. To my knowledge the only code shared between 2.79 builds and 2.80 beta are the updates to Cycles, so hopefully that narrows down the source of the problem? May be in the newer Cycles/viewport-render code and not the handling of OSL shaders or materials UI display?
Author

I have the theory that it's about the material icons since this same problem happen in the select material drop down menu in Shader Editor. But of course i can be wrong about it.

I have the theory that it's about the material icons since this same problem happen in the select material drop down menu in Shader Editor. But of course i can be wrong about it.

This issue was referenced by blender/cycles@b6b3d8e294

This issue was referenced by blender/cycles@b6b3d8e294a9f30a4fe8257e45b1ac68b849bad5

This issue was referenced by 1be16466e7

This issue was referenced by 1be16466e7983edbe8794127141267a8099d54be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

This Bug is Back. Tested in 1c1e3de015
Any chance we get a Fix before 2.8 final release?

This Bug is Back. Tested in 1c1e3de015 Any chance we get a Fix before 2.8 final release?

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

This issue was referenced by blender/cycles@432272fcec

This issue was referenced by blender/cycles@432272fcecc5bc10d6b9e43a4bace003f9632a33

This issue was referenced by b50cf33d91

This issue was referenced by b50cf33d917b3e0fe7152cff96996e5a850c68d4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60434
No description provided.